--- a/main/main.ipynb
+++ b/main/main.ipynb
@@ -33,6 +33,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "20b731cb-d3a4-4406-b7e5-561170bfbd20",
    "metadata": {},
@@ -419,6 +420,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "27b12d3f-cb37-4d21-a159-9de6ee36efc3",
    "metadata": {},
@@ -675,9 +677,48 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4ff85157-a874-425f-8813-881e1b6c2903",
+   "metadata": {},
+   "source": [
+    "## Arxiv abstracts (large)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cd08ddb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get 10 abstract-hypothesis pairs from abstracts.json and hypotheses.json respectively, zip and save as json\n",
+    "import json\n",
+    "\n",
+    "with open('../data/abstracts.json', 'r') as f:\n",
+    "    abstracts = json.load(f)\n",
+    "\n",
+    "with open('../data/hypotheses.json', 'r') as f:\n",
+    "    hypotheses = json.load(f)\n",
+    "\n",
+    "examples = []\n",
+    "for abstract, hypothesis in zip(abstracts, hypotheses):\n",
+    "    examples.append({\n",
+    "        # abstract should be everything that comes after 'Hypothesis: ' in the text field\n",
+    "        'abstract': abstract['text'].split('Hypothesis: ')[1],\n",
+    "        # hypothesis should be everything that comes after 'Hypothesis: '\n",
+    "        'hypothesis': hypothesis['text'].split('Hypothesis: ')[1]\n",
+    "    })\n",
+    "\n",
+    "# now create examples.json and save the first 25 examples to it\n",
+    "with open('examples.json', 'w') as f:\n",
+    "    json.dump(examples[:25], f)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ff85157-a874-425f-8813-881e1b6c2903",
+   "id": "9c4abfdf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -699,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
